--- a/Historico/Historico/Views/MainPage.xaml
+++ b/Historico/Historico/Views/MainPage.xaml
@@ -1,4 +1,6 @@
-<?xml version="1.0" encoding="utf-8" ?>
+<!--Gabriel Joaquim e João Victor-->
+    
+    <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage
     x:Class="Historico.Views.MainPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
@@ -10,34 +12,32 @@
     <ContentPage.Content>
         <ScrollView>
             <VerticalStackLayout Padding="16" Spacing="6">
-                <!-- Page title -->
-                <Label Text="Hoje" Style="{StaticResource SectionTitle}" />
 
-                <!-- Sections generated with BindableLayout -->
                 <StackLayout BindableLayout.ItemsSource="{Binding Sections}">
                     <BindableLayout.ItemTemplate>
                         <DataTemplate>
                             <StackLayout>
                                 <Label Text="{Binding Title}" Style="{StaticResource SectionTitle}" />
-                                <StackLayout Orientation="Horizontal" Spacing="10" Padding="6,0,0,10">
-                                    <StackLayout BindableLayout.ItemsSource="{Binding Items}" Orientation="Horizontal" Spacing="8">
-                                        <BindableLayout.ItemTemplate>
-                                            <DataTemplate>
-                                                <Button
-                                                    Text="{Binding Title}"
-                                                    Style="{StaticResource PillButtonStyle}"
-                                                    Command="{Binding BindingContext.SelectHistoryCommand, Source={x:Reference Page}}"
-                                                    CommandParameter="{Binding .}" />
-                                            </DataTemplate>
-                                        </BindableLayout.ItemTemplate>
-                                    </StackLayout>
-                                </StackLayout>
+                                <VerticalStackLayout 
+                                    BindableLayout.ItemsSource="{Binding Items}" 
+                                    Spacing="8"
+                                    Margin="6,0,0,10">
+                                    <BindableLayout.ItemTemplate>
+                                        <DataTemplate>
+                                            <Button
+                                                Text="{Binding Title}"
+                                                Style="{StaticResource PillButtonStyle}"
+                                                Command="{Binding BindingContext.SelectHistoryCommand, Source={x:Reference Page}}"
+                                                CommandParameter="{Binding .}" />
+                                        </DataTemplate>
+                                    </BindableLayout.ItemTemplate>
+                                </VerticalStackLayout>
+
                             </StackLayout>
                         </DataTemplate>
                     </BindableLayout.ItemTemplate>
                 </StackLayout>
 
-                <!-- spacer bottom -->
                 <BoxView HeightRequest="40" Color="Transparent" />
             </VerticalStackLayout>
         </ScrollView>
